--- a/Desafios/Desafio 1 - simgle page - Node,React/package.json
+++ b/Desafios/Desafio 1 - simgle page - Node,React/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sequelize": "^6.31.0",
     "sqlite3": "^5.1.6"
