--- a/Desafios/Desafio 2/Backend/package.json
+++ b/Desafios/Desafio 2/Backend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sequelize": "^6.31.0",
     "sqlite3": "^5.1.6"
