--- a/teste/todo/package.json
+++ b/teste/todo/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "antd": "^5.4.7",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.0",
