--- a/Desafios/Desafio 4 - ApiCNPJ/api-cnpj/package.json
+++ b/Desafios/Desafio 4 - ApiCNPJ/api-cnpj/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-tree-view": "^0.1.0",
+    "react-treeview": "^0.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
