--- a/Desafios/Desafio 4 - ApiCNPJ/api-cnpj/package.json
+++ b/Desafios/Desafio 4 - ApiCNPJ/api-cnpj/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icon": "^1.0.0",
     "react-toastify": "^9.1.3",
     "react-tree-view": "^0.1.0",
     "react-treeview": "^0.4.7"
