--- a/teste/vite-project/package.json
+++ b/teste/vite-project/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "./",
-  "name": "api-cnpj",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,30 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.0",
-    "antd": "^5.5.0",
     "axios": "^1.4.0",
-    "moment": "^2.29.4",
-    "numeral": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-icon": "^1.0.0",
-    "react-toastify": "^9.1.3",
-    "react-tree-view": "^0.1.0",
-    "react-treeview": "^0.4.7"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   }
 }
