--- a/Desafios/Desafio 4 - ApiCNPJ/api-cnpj/package.json
+++ b/Desafios/Desafio 4 - ApiCNPJ/api-cnpj/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^5.1.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
