--- a/Typescript/16-07/package.json
+++ b/Typescript/16-07/package.json
@@ -7,6 +7,7 @@
     "start" : "tsc ./src/index.ts && node ./src/index.js",
     "start1" : "tsc ./src/index1.ts && node ./src/index1.js",
     "start2" : "tsc ./src/index2.ts && node ./src/index2.js",
+    "start3" : "tsc ./src/index3.ts && node ./src/index3.js",
     "initTSC" : "tsc --init"
   },
   "dependencies": {
