--- a/teste/script fv/package.json
+++ b/teste/script fv/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.4.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
