--- a/teste/script fv/package.json
+++ b/teste/script fv/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
     "sequelize": "^6.32.1",
+    "sharp": "^0.32.5",
     "sqlite3": "^5.1.6"
   }
 }
