--- a/Tools/Mapa/front/package.json
+++ b/Tools/Mapa/front/package.json
@@ -15,7 +15,9 @@
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "ol": "^7.5.1",
+    "ol-contextmenu": "^5.2.1",
     "react": "^18.2.0",
+    "react-contextmenu": "^2.14.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
