--- a/Tools/Mapa/front/package.json
+++ b/Tools/Mapa/front/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.8.3",
+    "antd": "5.7.0",
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
