--- a/Tools/Mapa/front/package.json
+++ b/Tools/Mapa/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "5.7.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "ol": "^7.5.1",
