--- a/Tools/Mapa/front/package.json
+++ b/Tools/Mapa/front/package.json
@@ -19,7 +19,8 @@
     "ol-contextmenu": "^5.2.1",
     "react": "^18.2.0",
     "react-contextmenu": "^2.14.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
