--- a/Tools/Mapa/back/package.json
+++ b/Tools/Mapa/back/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "node-firebird": "^1.1.5",
+    "node-jasper": "^0.2.5",
     "numeral": "^2.0.6",
     "sequelize": "^6.32.1",
     "shapefile": "^0.6.6",
