--- a/Tools/Mapa/front/package.json
+++ b/Tools/Mapa/front/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "antd": "5.7.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
