--- a/Tools/Mapa/front/package.json
+++ b/Tools/Mapa/front/package.json
@@ -17,6 +17,7 @@
     "antd": "5.7.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
