--- a/Playground/NODE JS/package.json
+++ b/Playground/NODE JS/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3"
   }
 }
